[tool.poetry]
name = "coco-docker"
version = "0.0.0"  # This version will be overridden by the plugin
description = "CoCo: Your Container Companion — A helpful CLI for Docker tasks"
authors = ["teismar <eismartim@gmail.com>"]
readme = "README.md"
packages = [
    { include = "coco" }
]

include = [
    "assets/logo.txt",
    "assets/funfacts.txt"
]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
typer = "^0.15.1"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
coco = "coco.coco:app"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.7.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
