[tool.poetry]
name = "coco-docker"
version = "0.0.0"  # This version will be overridden by the plugin
description = "CoCo: Your Container Companion — A helpful CLI for Docker tasks"
authors = ["teismar <eismartim@gmail.com>"]
readme = "README.md"
packages = [
    { include = "coco" }
]

include = [
    "assets/logo.txt",
    "assets/funfacts.txt"
]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
typer = "^0.15.1"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
coco = "coco.coco:app"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
